Updated schema for tax stuff, updated test data in /analyzeReceipt
